--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint": "^8.34.0",
     "nuxt": "^3.2.2",
     "pinia": "^2.0.30",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vue-gtag-next": "^1.14.0"
   },
   "dependencies": {
     "@feedback-fish/vue": "^1.0.1",
