--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "@feedback-fish/vue": "^1.0.1",
+    "@nuxt/types": "^2.16.3",
     "@wagmi/core": "^1.0.5",
     "ethers": "^6.3.0",
-    "lottie-web": "^5.11.0",
     "viem": "^0.3.31",
     "vue-social-sharing": "^4.0.0-alpha4"
   }
