--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nuxt/types": "^2.16.3",
     "@wagmi/core": "^1.0.5",
     "ethers": "^6.3.0",
+    "socket.io-client": "^4.6.1",
     "viem": "^0.3.31",
     "vue-social-sharing": "^4.0.0-alpha4"
   }
