--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.2",
+    "@capacitor/cli": "^5.0.4",
     "@iconify-json/carbon": "^1.1.15",
     "@iconify-json/twemoji": "^1.1.11",
     "@nuxtjs/color-mode": "^3.2.0",
@@ -32,6 +33,9 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@capacitor/android": "^5.0.4",
+    "@capacitor/core": "^5.0.4",
+    "@capacitor/ios": "^5.0.4",
     "@feedback-fish/vue": "^1.0.1",
     "@nuxt/types": "^2.16.3",
     "@wagmi/core": "^1.0.5",
