--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@capacitor/core": "^5.0.4",
     "@capacitor/ios": "^5.0.4",
     "@feedback-fish/vue": "^1.0.1",
+    "@kolirt/vue-web3-auth": "^2.0.1",
     "@nuxt/types": "^2.16.3",
-    "@wagmi/core": "^1.0.5",
+    "@wagmi/core": "^1.4.13",
+    "@web3modal/wagmi": "^3.5.3",
     "ethers": "^6.3.0",
     "socket.io-client": "^4.6.1",
-    "viem": "^0.3.31",
+    "viem": "^2.0.0",
     "vue-social-sharing": "^4.0.0-alpha4"
   }
 }
