--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@iconify-json/twemoji": "^1.1.11",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.6",
-    "@unocss/nuxt": "0.51.8",
+    "@unocss/nuxt": "^0.58.3",
     "@vite-pwa/nuxt": "^0.0.6",
     "@vueuse/nuxt": "^9.13.0",
     "animated-unocss": "^0.0.4",
@@ -36,8 +36,14 @@
     "@nuxt/types": "^2.16.3",
     "@wagmi/core": "^1.4.13",
     "@web3modal/wagmi": "^3.5.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "ethers": "^6.3.0",
+    "lucide-react": "^0.309.0",
+    "radix-vue": "^1.3.1",
+    "shadcn-nuxt": "^0.8.7",
     "socket.io-client": "^4.6.1",
+    "tailwind-merge": "^2.2.0",
     "viem": "^2.0.0",
     "vue-social-sharing": "^4.0.0-alpha4"
   }
