--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@iconify-json/twemoji": "^1.1.11",
     "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.6",
-    "@unocss/nuxt": "^0.58.3",
+    "@unocss/nuxt": "0.51.8",
     "@vite-pwa/nuxt": "^0.0.6",
     "@vueuse/nuxt": "^9.13.0",
     "animated-unocss": "^0.0.4",
